--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-starter",
+  "name": "synchronizer",
   "version": "0.0.0",
   "description": "A template for typescript projects",
   "main": "./lib/cjs/index.js",
@@ -22,6 +22,8 @@
     "build-base": "tsc -p .",
     "build-esm": "pnpm build-base --outDir lib/esm",
     "build-cjs": "pnpm build-base --outDir lib/cjs --module commonjs && pnpm fix-cjs",
+    "build-test": "pnpm build-esm --sourceMap false && pnpm cpy --flat ./test/index.html ./lib/esm && pnpm build-esm --sourceMap false --watch",
+    "start-test": "pnpm http-server ./lib/esm",
     "fix-cjs": "node --loader ts-node/esm ./fix-cjs.ts",
     "test-script": "node --loader ts-node/esm ./src/test.ts"
   },
@@ -34,9 +36,11 @@
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.3",
+    "cpy-cli": "^5.0.0",
     "eslint": "^9.15.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "legally": "^3.5.10",
@@ -55,12 +59,12 @@
     "name": "Janik Schumacher (LoaderB0T)",
     "url": "https://awdware.de"
   },
-  "homepage": "https://github.com/LoaderB0T/typescript-starter",
+  "homepage": "https://github.com/LoaderB0T/synchronizer",
   "bugs": {
-    "url": "https://github.com/LoaderB0T/typescript-starter/issues"
+    "url": "https://github.com/LoaderB0T/synchronizer/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LoaderB0T/typescript-starter.git"
+    "url": "https://github.com/LoaderB0T/synchronizer.git"
   }
 }
