--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,10 +3,16 @@
     "target": "ES2019",
     "module": "ESNext",
     "baseUrl": "./",
-    "lib": ["ES2019", "ESNext"],
+    "lib": [
+      "ES2019",
+      "ESNext",
+      "DOM"
+    ],
     "declaration": true,
     "strict": true,
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "sourceMap": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
