chore: package updates

--- a/package.json
+++ b/package.json
@@ -34,23 +34,23 @@
     "@awdware/eslint-config-base": "^2.1.1",
     "@awdware/eslint-config-nodejs": "^2.0.0",
     "@awdware/prettier-config": "^1.0.0",
-    "@jest/globals": "^30.0.3",
+    "@jest/globals": "^30.0.5",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.10",
+    "@types/node": "^24.1.0",
     "cpy-cli": "^5.0.0",
-    "eslint": "^9.15.0",
-    "eslint-plugin-import": "2.31.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "http-server": "^14.1.1",
-    "jest": "^30.0.4",
+    "jest": "^30.0.5",
     "jest-junit": "^16.0.0",
     "legally": "^3.5.10",
-    "prettier": "^3.3.3",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.15.0"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.38.0"
   },
   "prettier": "@awdware/prettier-config",
   "keywords": [
